# begin

./: .gitignore  CLAUDE.md
backend/: .env.example  demo.py  graph.py  pyproject.toml  server.py
backend/clients/: logging_client.py  postgres_client.py
backend/clients/postgres_client/: __init__.py
backend/clients/postgres_client/queries/: service_consents.py  threads.py
backend/core/: chat_agent.py  langsmith_config.py  tools.py
backend/core/graphs/: builder.py  single_agent.py
backend/core/graphs/nodes/agents/student_debt/: react.py
backend/core/graphs/nodes/agents/tools/: example_tool.py
backend/core/graphs/nodes/agents/utils/: README.md  agent_subgraph.py  message_redaction.py
backend/core/graphs/nodes/entry_rag/: node.py
backend/core/graphs/nodes/guardrails/: node.py
backend/core/graphs/nodes/initialize/: node.py
backend/core/graphs/nodes/merge/: node.py
backend/core/graphs/nodes/safe_response/: node.py
backend/core/graphs/nodes/utils/: conversation_context.py
backend/core/graphs/types/: artifact.py  guardrail_validation.py  state.py
backend/core/graphs/utils/: model.py
backend/core/graphs/utils/rag/: helpers.py
backend/core/prompts/: README.md  loader.py
backend/core/prompts/candidly/: input_guardrail_prompt.j2  input_guardrail_role.j2  input_rag.j2  safe_response_prompt.j2  safe_response_role.j2  single_student_debt.j2  single_student_debt_2.j2
backend/experiments/: agent.ipynb  api.ipynb  auth_helper.py
backend/learning/: structured_output.ipynb
backend/utils/: api_models.py  message_converter.py
frontend/: .gitignore  (+4 more)
(+125 files in other folders)
